auth(still working on), redis and docker

--- a/Dasher/appsettings.json
+++ b/Dasher/appsettings.json
@@ -1,12 +1,17 @@
 {
   "ConnectionStrings": {
-    "DbConnection": "Server=localhost;Port=5433;Database=Dasher;Username=postgres;Password=9nSN8n59"
+    "DbConnection": "Server=localhost;Port=5433;Database=Dasher;Username=postgres;Password=9nSN8n59",
+    "RedisConn": "localhost:90"
   },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
     }
+  },
+  "JwtOptions": {
+    "SecretKey": "secretkeysecretkeysecretkeysecretkeysecretkeysecretkey",
+    "ExpiresHours" : "12"
   },
   "AllowedHosts": "*",
   "DetailedErrors": true
